# physical_based_animations

pba/: CMakeLists.txt  Readme  Readme~
pba/course/: CMakeLists.txt  Readme~
pba/course/pba/: Makefile
pba/course/pba/base/: Matrix.C  ObjReader.C  PbaThing.C  PbaViewer.C
pba/course/pba/include/: BaseForce.h  BaseSolver.h  Collision.h  Face.h  Gravity.h  LeapfrogSolver.h  Matrix.h  ObjReader.h  PbaThing.h  PbaViewer.h  Point.h  RigidBodyCollision.h  RigidBodySolver.h  RigidBodyStateData.h  SixOrderSolver.h  SoftBodyStateData.h  SphereStateData.h  SphereTriangleCollision.h  Triangle.h  Types.h  Vector.h
pba/course/pba/models/: bar1.mtl
pba/course/pba/python/: pba_cube_viewer.py~
pba/course/pba/swig/: PbaThings.i~  PbaThings.py  PbaThings_wrap.cxx
pba/course/pba/things/: MyPbaThing.h~  PongGamePbaThing.h  RigidBodyPbaThing.h  SoftBodyPbaThing.h  SpherePbaThing.h
